# REmatchFork

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  asset-manifest.json  index.html  precache-manifest.d66d6a2c9851c29ceb78ba3f13068780.js  run_and_execute.sh  service-worker.js  setup.cfg  setup.py  wheel.sh
REmatchEngine/: .gitignore  CMakeLists.txt  README.md  appveyor.yml  setup.py
REmatchEngine/src/: CMakeLists.txt  document.hpp  eval.cpp  eval.hpp  evaliter.cpp  evaliter.hpp  interface.cpp  match.cpp  match.hpp
REmatchEngine/src/automata/: eva.hpp  (+4 more)
REmatchJS/: README.md  package-lock.json  package.json
REmatchJS/lib/: README.md  index.js  rematch_wasm.js  rematch_wasm.wasm
REmatchJS/test/: test.js  test_simple.js
REmatchPython/: .gitignore  README.md  REmatch.py  test_all.py  test_basic_operation.py
REmatchWeb/: .firebaserc  package-lock.json  package.json
REmatchWeb/.firebase/: hosting.YnVpbGQ.cache
REmatchWeb/public/: index.html  liteWork.js  rematch_wasm.js  rematch_wasm.wasm  work.js
REmatchWeb/src/: App.css  App.css.map  App.js  App.scss
docs/reports/: 2021-09-16.md
js/test/: test.js
report/: report.md
scripts/py/: experiment.py  googleutils.py  ranked_analysis.ipynb
src/: CMakeLists.txt  anchors.hpp  charclass.cpp  charclass.hpp  document.hpp  enumeration.cpp  enumeration.hpp  eval.cpp  eval.hpp  evaliter.cpp  evaliter.hpp  interface.cpp  structures.cpp  structures.hpp
src/automata/: detautomaton.hpp  detstate.cpp  detstate.hpp  eva.cpp  lva.cpp  lva.hpp  lvastate.hpp
src/det/: detmanager.cpp  detmanager.hpp
src/factories/: factories.cpp  factories.hpp
src/interfaces/: rematch.i  rematch_wrap.cpp  wasm.cpp
src/main/: test-anchors.cpp  test-regex.cpp  test-utf8.cpp
src/parser/: ast.cpp  ast.hpp  exceptions.hpp  grammar.hpp  parser.cpp  parser.hpp  test_unicode.cpp
src/parser/visitors/: automata_visitor.cpp  automata_visitor.hpp  filter_factory_visitor.cpp  filter_factory_visitor.hpp  variable_factory_visitor.cpp
src/regex/: regex.cpp  regex.hpp  regex_options.hpp
src/rematch/: CMakeLists.txt  charclass.cpp  charclass.hpp  enumeration.cpp  enumeration.hpp  match.cpp  match.hpp
src/rematch/automata/dfa/: detstate.hpp  dfa.cpp  dfa.hpp  dstate.cpp
src/rematch/automata/nfa/: eva.cpp  eva.hpp  lva.cpp  lva.hpp  state.cpp  state.hpp  sva.cpp
src/rematch/automata/wnfa/: wnfa.hpp
src/rematch/core/: core.hpp
src/rematch/det/: detmanager.cpp  detmanager.hpp
src/rematch/evaluation/: eofilter_evaluator_new_v2.cpp  evaluator.hpp  normal_evaluator.cpp  ranked_evaluator.cpp  ranked_evaluator.hpp  segment_evaluator.cpp  segment_evaluator.hpp
src/rematch/evaluation/document/: filedocument.hpp  strdocument.hpp
src/rematch/factories/: factories.cpp  factories.hpp
src/rematch/parse/: parser.cpp  parser.hpp  visitors.hpp
src/rematch/parse/automata/: ast.hpp  grammar.hpp  parser.cpp  parser.hpp  visitor.cpp  visitor.hpp
src/rematch/parse/automata/nfa/: ast.hpp  grammar.hpp  parser.cpp  visitor.cpp  visitor.hpp
src/rematch/parse/automata/wva/: ast.hpp  grammar.hpp  parser.cpp  parser.hpp  visitor.cpp  visitor.hpp
src/rematch/parse/charclass/: ast.hpp  charclass_visitor.cpp  charclass_visitor.hpp  grammar.hpp
src/rematch/parse/grammar/: REmatchLexer.g4  REmatchParser.g4  generate.sh
src/rematch/parse/grammar/autogenerated/: REmatchLexer.cpp  REmatchLexer.h  REmatchLexer.interp  REmatchParser.cpp  REmatchParser.h  REmatchParser.interp  REmatchParser.tokens  REmatchParserBaseVisitor.cpp  REmatchParserBaseVisitor.h  REmatchParserVisitor.cpp  REmatchParserVisitor.h
src/rematch/parse/regex/: ast.hpp  grammar.hpp  parser.cpp  parser.hpp  visitors.hpp
src/rematch/parse/regex/visitors/: automata_visitor.cpp  automata_visitor.hpp  epsilon_visitor.cpp  epsilon_visitor.hpp  filter_factory_visitor.cpp  filter_factory_visitor.hpp  variable_factory_visitor.cpp  variable_factory_visitor.hpp
src/rematch/parse/visitors/: automata_visitor.hpp  charclass_visitor.hpp  epsilon_visitor.cpp  epsilon_visitor.hpp  filter_factory_visitor.hpp  variable_factory_visitor.cpp  variable_factory_visitor.hpp  variable_factory_visitor_antlr.hpp
src/rematch/parse/visitors/antlr/: automata_visitor.hpp  filter_factory_visitor.hpp  variable_factory_visitor.hpp
src/rematch/regex/: regex.cpp  regex.hpp  regex_options.hpp
src/rematch/structs/: capture_place.hpp
src/rematch/structs/ecs/: ecs.hpp  enumerator.cpp  enumerator.hpp  mempool.hpp
src/rematch/structs/how/: binomial_heap.hpp  heap.hpp  how.hpp  how_paper.hpp  iheap.hpp
src/rematch/structs/match/: spaniterator.cpp  spaniterator.hpp  stringiterator.cpp  stringiterator.hpp
src/targets/: CMakeLists.txt
src/targets/main/: interface.cpp  options.hpp  ranked-enum.cpp  rematch.cpp  single_variables.cpp  test-ecs.cpp  vicente.cpp
static/css/: 2.be193143.chunk.css  2.be193143.chunk.css.map  main.e22fa949.chunk.css  main.e22fa949.chunk.css.map
static/js/: 2.2ba9fe58.chunk.js  2.2ba9fe58.chunk.js.map  main.5746ac58.chunk.js  main.5746ac58.chunk.js.map  runtime-main.2a4defc6.js  runtime-main.2a4defc6.js.map
tests/: CMakeLists.txt  test.cpp
tests/emscripten/: test.js
tests/swig/: simple-test.py
(+43 files in other folders)
